fix text overflow in posts

--- a/forum/static/forum/posts.css
+++ b/forum/static/forum/posts.css
@@ -32,7 +32,7 @@
 }
 
 .post-content {
-  white-space: pre;
+  white-space: pre-line;
 }
 
 .topic-name {
